# libero

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml
client/: .gitignore  README.md  pubspec.yaml
client/lib/: BacklogModels.dart  backlog_card_edit.dart  backlog_details_pane.dart  backlog_item_card.dart  backlog_list_pane.dart  backlog_models.dart  main.dart
client/linux/: CMakeLists.txt  my_application.cc
docs/: curl-reference.md
lib/: backlog_details_pane.dart  backlog_list_pane.dart  backlog_models.dart  main.dart
linux/: my_application.cc
server/src/: apod.rs  main.rs
server/src/backlog/: item.rs  store.rs
snap/: snapcraft.yaml
snap/gui/: libero.desktop
src/: apod.rs  backlog_items.rs  items.rs  main.rs  storage.rs
src/backlog/: item.rs  mod.rs
tools/: snap_backup.sh
